| Bug #2599 | mysql fails to start on ia64 because of too-small a thread-stack | ||
|---|---|---|---|
| Submitted: | 1 Feb 2004 8:32 | Modified: | 2 Aug 2004 17:52 |
| Reporter: | Christian Hammers (Silver Quality Contributor) (SCA) | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.0.17 | OS: | Linux (Debian GNU/Linux ia64) |
| Assigned to: | Sergei Golubchik | Target Version: | |
[1 Feb 2004 8:32]
Christian Hammers
[2 Feb 2004 5:05]
Sinisa Milivojevic
Thank you for writting to us. This is not MySQL bug. Both our sources and our binaries have a default stack of 256 K. This was tested and confirmed on all IA-64 platforms.
[2 Feb 2004 10:16]
Sergei Golubchik
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ok, thanks for reporting this.
fixed.
[1 Aug 2004 20:51]
Christian Hammers
Sinisa said it's not a bug and Sergei said that it has been fixed in the latest source?! But at least the proposed fix has not been applied although the bug report is closed. So what happened here? :-) thanks, -christian-
[1 Aug 2004 21:51]
Christian Hammers
Oh, ok, I found the patch from Sergey, it's some lines down: http://mysql.bkbits.net:8080/mysql-4.0/diffs/sql/mysqld.cc@1.478
[2 Aug 2004 17:52]
Sinisa Milivojevic
It depended on the build. That is why it worked for me. Anyway, stack is increased for other reasons, including the way ECC compiler resolves some branches.
