increase the size of a signal thread's stack (the old one was too small for the thread to be created on some systems) bug#2599